force-app/main/default/objects/sma__MADriveProfile__c/sma__MADriveProfile__c.object-meta.xml
<CustomObject>
    <label>MapAnything Drive Profile</label>
    <nameField>
        <label>MapAnything Drive Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Drive Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>