force-app/main/default/objects/sma__MADriveProfile__c/fields/sma__Length__c.field-meta.xml
<CustomField>
    <fullName>sma__Length__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>