force-app/main/default/objects/sma__MADriveProfile__c/fields/sma__LengthUnits__c.field-meta.xml
<CustomField>
    <fullName>sma__LengthUnits__c</fullName>
    <label>Length Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>