force-app/main/default/objects/sma__MADriveProfile__c/fields/sma__NumberOfTrailers__c.field-meta.xml
<CustomField>
    <fullName>sma__NumberOfTrailers__c</fullName>
    <label>Number of Trailers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>