force-app/main/default/objects/sma__MADriveProfile__c/fields/sma__ProfileType__c.field-meta.xml
<CustomField>
    <fullName>sma__ProfileType__c</fullName>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>