force-app/main/default/objects/sma__MADriveProfile__c/fields/sma__Weight__c.field-meta.xml
<CustomField>
    <fullName>sma__Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>